integration-tests/tests/snapshots/postgres__function_zxy2_6_57_29.snap
---
source: integration-tests/tests/postgres.rs
expression: dump
---
layer: 0
  name: public.function_zxy2
  version: 2
  extent: 4096
  feature: 0
    id: (none)
    geometry: POINT(1614,3539)
    properties: (none)
  feature: 1
    id: (none)
    geometry: POINT(1613,3540)
    properties: (none)
  feature: 2
    id: (none)
    geometry: POINT(1614,3540)
    properties: (none)
  feature: 3
    id: (none)
    geometry: POINT(1614,3540)
    properties: (none)
  feature: 4
    id: (none)
    geometry: POINT(1614,3539)
    properties: (none)
  feature: 5
    id: (none)
    geometry: POINT(1614,3539)
    properties: (none)
  feature: 6
    id: (none)
    geometry: POINT(1613,3540)
    properties: (none)
  feature: 7
    id: (none)
    geometry: POINT(1613,3540)
    properties: (none)
  feature: 8
    id: (none)
    geometry: POINT(1613,3539)
    properties: (none)
  feature: 9
    id: (none)
    geometry: POINT(1614,3539)
    properties: (none)
