integration-tests/tests/snapshots/postgres__function_zxy_query_12_3673_1911.snap
---
source: integration-tests/tests/postgres.rs
expression: dump
---
layer: 0
  name: public.function_zxy_query
  version: 2
  extent: 4096
  feature: 0
    id: (none)
    geometry: POINT(884,1229)
    properties: (none)
  feature: 1
    id: (none)
    geometry: POINT(837,1259)
    properties: (none)
  feature: 2
    id: (none)
    geometry: POINT(881,1256)
    properties: (none)
  feature: 3
    id: (none)
    geometry: POINT(887,1280)
    properties: (none)
  feature: 4
    id: (none)
    geometry: POINT(867,1235)
    properties: (none)
  feature: 5
    id: (none)
    geometry: POINT(866,1246)
    properties: (none)
  feature: 6
    id: (none)
    geometry: POINT(861,1274)
    properties: (none)
  feature: 7
    id: (none)
    geometry: POINT(840,1250)
    properties: (none)
  feature: 8
    id: (none)
    geometry: POINT(842,1228)
    properties: (none)
  feature: 9
    id: (none)
    geometry: POINT(888,1216)
    properties: (none)
