integration-tests/tests/snapshots/postgres__materialized_view_0_0_0.snap
---
source: integration-tests/tests/postgres.rs
expression: "tile_dump(&martin, \"/mat_view/0/0/0\").await"
---
layer: 0
  name: mat_view
  version: 2
  extent: 4096
  feature: 0
    id: (none)
    geometry: POINT(655,1583)
    properties:
      id = 1 (uint)
  feature: 1
    id: (none)
    geometry: POINT(1207,1540)
    properties:
      id = 2 (uint)
